--- a/app/static/css/global.css
+++ b/app/static/css/global.css
@@ -11,6 +11,13 @@
     --text-muted: #a0a0a0;        /* Secondary/inactive text */
 }
 
+main {
+    height: calc(100% - 12rem); /* 6rem for nav + 6rem for footer */
+    overflow-y: auto;
+    scroll-behavior: smooth;
+    padding-bottom: 3rem; /* Avoid clipping last section under footer */
+}
+
 /* Reset & base styles */
 * {
     margin: 0;
@@ -46,6 +53,7 @@ nav {
     justify-content: space-between;
     top: 0;
     width: 100%;
+    height: 6rem;
     background-color: var(--surface);
     padding: 1rem 2rem;
     box-shadow: 0 2px 5px rgba(112, 112, 112, 0.1);
@@ -84,6 +92,7 @@ footer {
     left: 0;
     bottom: 0;
     width: 100%;
+    height: 6rem;
     padding: 1rem 0;
     background-color: var(--surface);
     color: var(--text);
